tests/fixtures/syntax/invalid/fixture_reference_dot_segment_middle_current_path.repor
case "fixture reference path must not contain a . segment in the middle" {
  $ true
  assert {
    file <"out.txt"> contents_equals @"snapshots/./stdout.json"
  }
}
